istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.chemimotty.com"
  - port:
      number: 443
      name: chemimotty-https
      protocol: HTTPS
    hosts:
    - "*.chemimotty.com"
    tls:
      mode: SIMPLE
      credentialName: chemimotty-tls
